--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <%= link_to "Login", new_user_session_path %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <%= yield %>
   </body>
 </html>
