Finally allowed users to only edit their own posts and admins to edit all

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <%= @blog.inspect %>
 <hr>
-<%= current_user.roles %>
+<%= current_user.id %>
 
 <strong>Title:</strong>
   <%= @blog.title %>
