--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -26,7 +26,11 @@
         <td><%= blog.image %></td>
         <td><%= blog.subject %></td>
         <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin, :user) %></td>
+        <% if current_user == nil %>
+          <td>Ha you fools!</td>
+        <% elsif current_user.id == blog.user_id || current_user.id == 1 %>
+          <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
+        <% end %> 
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin, :user) %></td>
       </tr>
     <% end %>
