--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :subject, id: :blog_subject %>
   </div>
 
+  <div class="field">
+    <%= form.label :user_id %><br />
+    <%= form.number_field :user_id, id: :blog_user_id %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
