--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
   </head>
 
   <body>
-    <%= link_to "Login", new_user_session_path %>
-    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% if logged_in?(:user, :site_admin) %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Login", new_user_session_path %>
+      <%= link_to "Register", new_user_registration_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
