Got image working on show page

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= @blog.inspect %>
 <hr>
-<%= current_user.id %>
 
 <strong>Title:</strong>
   <%= @blog.title %>
@@ -14,7 +13,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= @blog.image %>
+  <%= image_tag @blog.image %>
 </p>
 
 <p>
@@ -22,5 +21,5 @@
   <%= @blog.subject %>
 </p>
 
-<%= link_to 'Edit |', edit_blog_path(@blog) if current_user.id == @blog.user_id || current_user == :site_admin %>
+<%= link_to 'Edit |', edit_blog_path(@blog) if current_user == @blog.user_id || current_user == :site_admin %>
 <%= link_to 'Back', blogs_path %>
