--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,7 +1,5 @@
 <p id="notice"><%= notice %></p>
 <%= @blog.inspect %>
-<hr>
-<%= current_user.id %>
 
 <strong>Title:</strong>
   <%= @blog.title %>
@@ -14,7 +12,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= @blog.image %>
+  <%= image_tag(@blog.image) %>
 </p>
 
 <p>
